--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'New Jersey -- Juvenile fiction'
 - !lcsh 'Seashore -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: Six Little Bunkers at Cousin Tom's
 url: http://www.gutenberg.org/ebooks/17492
